# a2a-samples

samples/bbq-beach-agent/: pyproject.toml
samples/bbq-beach-agent/bbq_beach_agent/: __main__.py  agent_executor.py  test_client_a2a.py
samples/bbq-beach-agent/host_agent/: agent.py  app.py
samples/beach-party-app/beach_agent/: README.md  __main__.py  agent.py  test_client.py
